--- a/BRIEFING/Index.html
+++ b/BRIEFING/Index.html
@@ -220,6 +220,10 @@
                     field.value = value;
                 };
             };
+
+            form.addEventListener('submit', function (event) {
+                event.preventDefault();
+            });
         };
 
         window.salvarDados = function () {
